--- a/test/Makefile
+++ b/test/Makefile
@@ -1,10 +1,10 @@
-BUILTIN=../builtin
+BUILTIN := ../builtin
 
 .PHONY: test
 test:
 	../$(TARGET) test.c test.s
-	as test.s $(BUILTIN)/*.s start.s -o test.o
-	ld test.o
+	$(AS) test.s $(BUILTIN)/*.s start.s -o test.o
+	$(LD) test.o
 	./a.out
 
 .PHONY: clean
